--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,11 +1,11 @@
 <div class="cart-container">
   <div class="steps">
-    <div class="step" [class.completed]="currentStep > 1">{{'Cart.Title'|translate}}</div>
+    <div class="step" [class.completed]="currentStep > 1">{{'cart.Title'|translate}}</div>
     <div class="step" [class.completed]="currentStep > 2">Validar</div>
-    <div class="step" [class.completed]="currentStep > 3">{{'Cart.PersonalData.Title'|translate}}</div>
+    <div class="step" [class.completed]="currentStep > 3">{{'cart.Datos Personales.Title'| translate}}</div>
     <!-- <div class="step" [class.completed]="currentStep > 4">Confirmar</div>  -->
     <div class="step" [class.completed]="currentStep > 4">Pagar</div>
-    <div class="step" [class.completed]="currentStep > 5">Confirmación</div>
+    <div class="step" [class.completed]="currentStep > 5">{{'Confirmation'|translate}}</div>
   </div>
 
   <div class="step-content" *ngIf="currentStep === 1">
