--- a/src/app/cart/confirm-step/confirm-step.component.html
+++ b/src/app/cart/confirm-step/confirm-step.component.html
@@ -22,7 +22,7 @@
       </ul>
       <h3>{{ 'Cart.CartItems.Total'|translate }}: {{ totalPrice }} €</h3>
     </div>
-    <!-- <button (click)="next()">Siguiente</button> -->
+    <!-- <button (click)="next()">{{'Next'| translate}}</button> -->
   </div>
 
 </section>
