--- a/src/app/cart/confirmation-step/confirmation-step.component.html
+++ b/src/app/cart/confirmation-step/confirmation-step.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="confirmation">
-    <h2>{{'confirmation'|translate}}</h2>
+    <h2>{{'Confirmation'|translate}}</h2>
 
     <div class="payment-step" *ngIf="personalInfo.paymentMethod === 'Contra Reembolso'">
       <h3></h3>
