--- a/src/app/cart/confirm-step/confirm-step.component.html
+++ b/src/app/cart/confirm-step/confirm-step.component.html
@@ -16,7 +16,7 @@
       <ul>
         <li *ngFor="let item of cartItems" class="cart-item">
           <div class="cart-item-details">
-            {{ item.name }} - {{ 'Cart.CartItems.Quantity'|translate }}: {{ item.quantity }} - {{ 'Cart.CartItems.Weight'|translate }}: {{ item.weight }} kg - {{ 'Cart.CartItems.Price'|translate }}: {{ item.price }} €
+            {{ item.name }} - {{ 'cart.CartItems.Quantity'|translate }}: {{ item.quantity }} - {{ 'cart.CartItems.Weight'|translate }}: {{ item.weight }} kg - {{ 'cart.CartItems.Price'|translate }}: {{ item.price }} €
           </div>
         </li>
       </ul>
