--- a/src/app/cart/payment-step/payment-step.component.html
+++ b/src/app/cart/payment-step/payment-step.component.html
@@ -1,37 +1,37 @@
 
   <section *ngIf="paymentMethod === 'Tarjeta'">
     <div class="payment-step">
-      <h3>Pago con tarjeta</h3>
+      <h3>{{'cart.Datos Personales.Card_Payment'|translate}}</h3>
       <app-confirm-step></app-confirm-step>
       <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="cardNumber">Número de Tarjeta:</label>
+          <label for="cardNumber">{{'Labels.CardNumber'|translate}}:</label>
           <input id="cardNumber" formControlName="cardNumber" placeholder="Ingrese el número de tarjeta">
           <div *ngIf="paymentForm.get('cardNumber')?.invalid && paymentForm.get('cardNumber')?.touched" class="invalid-feedback">
-            <div *ngIf="paymentForm.get('cardNumber')?.hasError('required')">Número de Tarjeta es requerido</div>
-            <div *ngIf="paymentForm.get('cardNumber')?.hasError('pattern')">Número de Tarjeta debe tener 16 dígitos numéricos</div>
+            <div *ngIf="paymentForm.get('cardNumber')?.hasError('required')">{{'Notices.CardNumber_Is_Required'|translate}}</div>
+            <div *ngIf="paymentForm.get('cardNumber')?.hasError('pattern')">{{'Notices.CardNumber_Valid_Format'|translate}}</div>
           </div>
         </div>
       
         <div class="form-group">
-          <label for="expiryDate">Fecha de Expiración (MM/YY):</label>
+          <label for="expiryDate">{{'Labels.ExpirationDate'|translate}} :</label>
           <input id="expiryDate" formControlName="expiryDate" placeholder="MM/YY">
           <div *ngIf="paymentForm.get('expiryDate')?.invalid && paymentForm.get('expiryDate')?.touched" class="invalid-feedback">
-            <div *ngIf="paymentForm.get('expiryDate')?.hasError('required')">Fecha de Expiración es requerida</div>
-            <div *ngIf="paymentForm.get('expiryDate')?.hasError('pattern')">Fecha de Expiración debe estar en formato MM/YY</div>
+            <div *ngIf="paymentForm.get('expiryDate')?.hasError('required')">{{'Notices.ExpirationDate_Is_Required'|translate}}</div>
+            <div *ngIf="paymentForm.get('expiryDate')?.hasError('pattern')">{{'Notices.ExpirationDate_Valid_Format'|translate}}</div>
           </div>
         </div>
       
         <div class="form-group">
-          <label for="cvv">CVV:</label>
+          <label for="cvv">{{'Labels.CVV'|translate}}:</label>
           <input id="cvv" formControlName="cvv" placeholder="Ingrese el CVV">
           <div *ngIf="paymentForm.get('cvv')?.invalid && paymentForm.get('cvv')?.touched" class="invalid-feedback">
-            <div *ngIf="paymentForm.get('cvv')?.hasError('required')">CVV es requerido</div>
-            <div *ngIf="paymentForm.get('cvv')?.hasError('pattern')">CVV debe tener 3 dígitos numéricos</div>
+            <div *ngIf="paymentForm.get('cvv')?.hasError('required')">{{'Notices.CVV_Is_Required'|translate}}</div>
+            <div *ngIf="paymentForm.get('cvv')?.hasError('pattern')">{{'Notices.CVV_Valid_Format'|translate}}</div>
           </div>
         </div>
       
-        <button type="submit" [disabled]="!paymentForm.valid">Pagar</button>
+        <button type="submit" [disabled]="!paymentForm.valid">{{'Pay'|translate}}</button>
       </form>
     </div>
   </section>
