--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -15,7 +15,7 @@
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/">
-                            ver nuestros productos
+                            {{'See_Our_Products'|translate}}
                         </a>
                     </button>
                 </div>
@@ -32,7 +32,7 @@
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                            routerLink="/Cours"> ver nuestros productos
+                            routerLink="/Cours"> {{'See_Our_Products'|translate}}
                         </a>
                     </button>
                 </div>
@@ -50,7 +50,7 @@
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                            routerLink="/cours"> ver nuestros productos
+                            routerLink="/cours"> {{'See_Our_Products'|translate}}
                         </a>
                     </button>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                            routerLink="/material"> ver nuestros productos
+                            routerLink="/material"> {{'See_Our_Products'|translate}}
                         </a>
                     </button>
                 </div>
