--- a/src/app/cart/validate-step/validate-step.component.html
+++ b/src/app/cart/validate-step/validate-step.component.html
@@ -1,5 +1,5 @@
 <div class="validate-step">
-    <h3>Validar Pedido</h3>
+    <h3>{{'cart.Validate_Order'| translate}}</h3>
     <ul>
       <li *ngFor="let item of cartItems" class="cart-item">
         <div class="cart-item-details">
