--- a/src/app/cart/payment-step/payment-step.component.html
+++ b/src/app/cart/payment-step/payment-step.component.html
@@ -1,44 +1,49 @@
+<section *ngIf="paymentMethod === 'Tarjeta'">
+  <div class="payment-step">
+    <h3>{{'cart.Datos Personales.Card_Payment'|translate}}</h3>
+    <app-confirm-step></app-confirm-step>
+    <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="cardNumber">{{'Labels.CardNumber'|translate}}:</label>
+        <input id="cardNumber" formControlName="cardNumber" placeholder="">
+        <div *ngIf="paymentForm.get('cardNumber')?.invalid && paymentForm.get('cardNumber')?.touched"
+          class="invalid-feedback">
+          <div *ngIf="paymentForm.get('cardNumber')?.hasError('required')">
+            {{'Notices.CardNumber_Is_Required'|translate}}</div>
+          <div *ngIf="paymentForm.get('cardNumber')?.hasError('pattern')">
+            {{'Notices.CardNumber_Valid_Format'|translate}}</div>
+        </div>
+      </div>
 
-  <section *ngIf="paymentMethod === 'Tarjeta'">
-    <div class="payment-step">
-      <h3>{{'cart.Datos Personales.Card_Payment'|translate}}</h3>
-      <app-confirm-step></app-confirm-step>
-      <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label for="cardNumber">{{'Labels.CardNumber'|translate}}:</label>
-          <input id="cardNumber" formControlName="cardNumber" placeholder="">
-          <div *ngIf="paymentForm.get('cardNumber')?.invalid && paymentForm.get('cardNumber')?.touched" class="invalid-feedback">
-            <div *ngIf="paymentForm.get('cardNumber')?.hasError('required')">{{'Notices.CardNumber_Is_Required'|translate}}</div>
-            <div *ngIf="paymentForm.get('cardNumber')?.hasError('pattern')">{{'Notices.CardNumber_Valid_Format'|translate}}</div>
-          </div>
+      <div class="form-group">
+        <label for="expiryDate">{{'Labels.ExpirationDate'|translate}} :</label>
+        <input id="expiryDate" formControlName="expiryDate" placeholder="MM/YY">
+        <div *ngIf="paymentForm.get('expiryDate')?.invalid && paymentForm.get('expiryDate')?.touched"
+          class="invalid-feedback">
+          <div *ngIf="paymentForm.get('expiryDate')?.hasError('required')">
+            {{'Notices.ExpirationDate_Is_Required'|translate}}</div>
+          <div *ngIf="paymentForm.get('expiryDate')?.hasError('pattern')">
+            {{'Notices.ExpirationDate_Valid_Format'|translate}}</div>
         </div>
-      
-        <div class="form-group">
-          <label for="expiryDate">{{'Labels.ExpirationDate'|translate}} :</label>
-          <input id="expiryDate" formControlName="expiryDate" placeholder="MM/YY">
-          <div *ngIf="paymentForm.get('expiryDate')?.invalid && paymentForm.get('expiryDate')?.touched" class="invalid-feedback">
-            <div *ngIf="paymentForm.get('expiryDate')?.hasError('required')">{{'Notices.ExpirationDate_Is_Required'|translate}}</div>
-            <div *ngIf="paymentForm.get('expiryDate')?.hasError('pattern')">{{'Notices.ExpirationDate_Valid_Format'|translate}}</div>
-          </div>
-        </div>
-      
-        <div class="form-group">
-          <label for="cvv">{{'Labels.CVV'|translate}}:</label>
-          <input id="cvv" formControlName="cvv" placeholder="">
-          <div *ngIf="paymentForm.get('cvv')?.invalid && paymentForm.get('cvv')?.touched" class="invalid-feedback">
-            <div *ngIf="paymentForm.get('cvv')?.hasError('required')">{{'Notices.CVV_Is_Required'|translate}}</div>
-            <div *ngIf="paymentForm.get('cvv')?.hasError('pattern')">{{'Notices.CVV_Valid_Format'|translate}}</div>
-          </div>
-        </div>
-      
-        <button type="submit" [disabled]="!paymentForm.valid">{{'Pay'|translate}}</button>
-      </form>
-    </div>
-  </section>
+      </div>
 
-  <section *ngIf="paymentMethod === 'Contra Reembolso'">
-    <div class="payment-step">
-      <app-confirmation-step></app-confirmation-step>
-        <!-- <app-delivery></app-delivery> -->
-    </div>
-  </section>
+      <div class="form-group">
+        <label for="cvv">{{'Labels.CVV'|translate}}:</label>
+        <input id="cvv" formControlName="cvv" placeholder="">
+        <div *ngIf="paymentForm.get('cvv')?.invalid && paymentForm.get('cvv')?.touched" class="invalid-feedback">
+          <div *ngIf="paymentForm.get('cvv')?.hasError('required')">{{'Notices.CVV_Is_Required'|translate}}</div>
+          <div *ngIf="paymentForm.get('cvv')?.hasError('pattern')">{{'Notices.CVV_Valid_Format'|translate}}</div>
+        </div>
+      </div>
+
+      <button type="submit" [disabled]="!paymentForm.valid">{{'Pay'|translate}}</button>
+    </form>
+  </div>
+</section>
+
+<section *ngIf="paymentMethod === 'Contra Reembolso'">
+  <div class="payment-step">
+    <app-confirmation-step></app-confirmation-step>
+    <!-- <app-delivery></app-delivery> -->
+  </div>
+</section>
