--- a/src/app/cart/validate-step/validate-step.component.html
+++ b/src/app/cart/validate-step/validate-step.component.html
@@ -1,11 +1,12 @@
 <div class="validate-step">
-    <h3>{{'cart.Validate_Order'| translate}}</h3>
-    <ul>
-      <li *ngFor="let item of cartItems" class="cart-item">
-        <div class="cart-item-details">
-          {{ item.name }} - {{'cart.CartItems.Quantity'| translate}}: {{ item.quantity }} - {{'cart.CartItems.Weight'| translate}}: {{ item.weight }} kg
-        </div>
-      </li>
-    </ul>
-    <button (click)="next()">{{'Next'| translate}}</button>
-  </div>
+  <h3>{{'cart.Validate_Order'| translate}}</h3>
+  <ul>
+    <li *ngFor="let item of cartItems" class="cart-item">
+      <div class="cart-item-details">
+        {{ item.name }} - {{'cart.CartItems.Quantity'| translate}}: {{ item.quantity }} - {{'cart.CartItems.Weight'|
+        translate}}: {{ item.weight }} kg
+      </div>
+    </li>
+  </ul>
+  <button (click)="next()">{{'Next'| translate}}</button>
+</div>
