--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -34,15 +34,15 @@
             <p>{{'Category'|translate}}:: {{housingLocation?.id}}</p>
             <button class="CartBtn" (click)="addToCart(housingLocation?.id)">
               <span class="IconContainer">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)"
-                      class="cart">
-                      <path
-                          d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z">
-                      </path>
-                  </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)"
+                  class="cart">
+                  <path
+                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z">
+                  </path>
+                </svg>
               </span>
               <p class="text">{{'Add_To_Cart'|translate}}</p>
-          </button>
+            </button>
 
           </section>
 
@@ -54,9 +54,11 @@
           alt="Exterior photo of {{housingLocation?.name}}" />
       </div>
       <section class="listing-description">
-        <p>Stock limitée <q>En raison de notre engagement envers la qualité, notre miel est disponible en quantités limitées, garantissant une rareté précieuse et une fraîcheur absolue.</q></p>
+        <p>Stock limitée <q>En raison de notre engagement envers la qualité, notre miel est disponible en quantités
+            limitées, garantissant une rareté précieuse et une fraîcheur absolue.</q></p>
         <p>Produit Organique <q>Notre miel est cultivé avec respect pour l'environnement et votre bien-être.</q></p>
-        <p>Extraction à froid <q>Notre miel est extrait à froid pour préserver ses nutriments et ses saveurs délicates, offrant une expérience gustative authentique et riche.</q></p>
+        <p>Extraction à froid <q>Notre miel est extrait à froid pour préserver ses nutriments et ses saveurs délicates,
+            offrant une expérience gustative authentique et riche.</q></p>
       </section>
 
     </div>
@@ -70,14 +72,15 @@
         Milaflores
       </p>
     </section>
-    <section >
+    <section>
       <h2 class="title">{{'Similar_Product'|translate}}</h2>
 
       <section class="results">
-      <app-housing-location *ngFor="let housingLocation of housingLocationList" [housingLocation]="housingLocation"></app-housing-location>
-      
-    </section>
-    
+        <app-housing-location *ngFor="let housingLocation of housingLocationList"
+          [housingLocation]="housingLocation"></app-housing-location>
+
+      </section>
+
     </section>
   </div>
 
