--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,22 +24,26 @@
   <app-activities></app-activities>
 </section>
 
-<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Honeys'|translate}}
+<h1 class="title" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+  {{'Honeys'|translate}}
 </h1>
 <section class="results">
   <app-housing-location *ngFor="let housingLocation of filteredLocationList" [housingLocation]="housingLocation">
   </app-housing-location>
 </section>
 
-<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-  {{'Cours.Title'|translate}}</h1>
-<section class="results">
-  <app-courses-honey *ngFor="let coursHoney of coursesHoneyList" [coursHoney]="coursHoney"></app-courses-honey>
-</section>
 
-<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+
+<h1 class="title" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
   {{'Material.Title'|translate}}</h1>
 <section class="results">
   <app-material-honey *ngFor="let materialHoney of materialHoneyList"
     [materialHoney]="materialHoney"></app-material-honey>
+</section>
+
+
+<h1 class="title" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+  {{'Cours.Title'|translate}}</h1>
+<section class="results">
+  <app-courses-honey *ngFor="let coursHoney of coursesHoneyList" [coursHoney]="coursHoney"></app-courses-honey>
 </section>
