añadir la clase animated-img a los detalles del porductos

--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -50,7 +50,7 @@
 
       </div>
       <div class="flex-item">
-        <img class="slit-in-vertical" [src]="housingLocation?.photo"
+        <img class="animated-img" [src]="housingLocation?.photo"
           alt="Exterior photo of {{housingLocation?.name}}" />
       </div>
       <section class="listing-description">
