--- a/src/app/products/material-honey/details-material/details-material.component.html
+++ b/src/app/products/material-honey/details-material/details-material.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <div>
-            <img class="listing-photo" [src]="materialHoney?.photo" alt="Exterior photo of {{materialHoney?.name}}" />
+            <img class="listing-photo animated-img" [src]="materialHoney?.photo" alt="Exterior photo of {{materialHoney?.name}}" />
         </div>
 
         <section class="listing-apply">
