--- a/src/app/products/courses-honey/cours-team/cours-team.component.html
+++ b/src/app/products/courses-honey/cours-team/cours-team.component.html
@@ -1,5 +1,5 @@
 <section class="listing">
-    <img class="listing-photo" [src]="" alt="Exterior photo of {{staff.name}}">
+    <img class="listing-photo animated-img" [src]="" alt="Exterior photo of {{staff.name}}">
     <h2 class="">{{ staff.name }}</h2>
     <p class="">{{ staff.role}}</p>
     <p class="">{{ staff.description}}</p>
