--- a/src/app/products/material-honey/details-material/details-material.component.html
+++ b/src/app/products/material-honey/details-material/details-material.component.html
@@ -48,7 +48,7 @@
        
 
     </div>
-    <h2 class="title">Productos similares</h2>
+    <h2 class="title">{{'Similar_Product'|translate}}</h2>
     <section class="results">
         <app-material-honey *ngFor="let materialHoney of materialList" [materialHoney]="materialHoney"></app-material-honey>
     </section>
