--- a/src/app/products/material-honey/details-material/details-material.component.html
+++ b/src/app/products/material-honey/details-material/details-material.component.html
@@ -1,55 +1,67 @@
-<article [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-    <div class="flex-container">
-        <div class="flex-container-col">
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+    <h3 class="title">{{materialHoney?.name}}</h3>
+    <div class="container">
+        <div class="flex-container">
+            <div class="flex-item">
+                <div class="flex-container-col">
+                    <section class="listing-description">
+                        <p class="listing-location">{{materialHoney?.ubication}}</p>
+                        <p class="">{{'Price'|translate}}: {{materialHoney?.price}}</p>
+                        <ul>
+                            <li>{{'Location'|translate}}: {{materialHoney?.ubication}}</li>
+                            <li>{{'Duration'|translate}}duration: {{materialHoney?.duration}}</li>
+                        </ul>
+                        <button class="CartBtn" (click)="addToCart(materialHoney?.id)">
+                            <span class="IconContainer">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"
+                                    fill="rgb(17, 17, 17)" class="cart">
+                                    <path
+                                        d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z">
+                                    </path>
+                                </svg>
+                            </span>
+                            <p class="text">{{'Add_To_Cart'|translate}}</p>
+                        </button>
+                    </section>
+                </div>
+            </div>
+            <div class="flex-item">
+                <img class="" [src]="materialHoney?.photo" alt="Exterior photo of {{materialHoney?.name}}" />
+            </div>
+            <div class="flex-item">
+                <section class="">
+                    <p class="underline">Stock limitée</p>
+                    <blockquote>
+                        <q>En raison de notre engagement envers la qualité, notre miel est disponible en quantités
+                            limitées, garantissant une rareté précieuse et une fraîcheur absolue.
+                        </q>
+                    </blockquote>
 
-            <section class="listing-description">
-                <h2 class="listing-heading">{{materialHoney?.name}}</h2>
-                <p class="listing-location">{{materialHoney?.ubication}}</p>
-                <p class="">{{'Price'|translate}}: {{materialHoney?.price}}</p>
-                <ul>
-                    <li>{{'Location'|translate}}: {{materialHoney?.ubication}}</li>
-                    <li>{{'Duration'|translate}}duration: {{materialHoney?.duration}}</li>
-                </ul>
-                <button class="CartBtn" (click)="addToCart(materialHoney?.id)">
-                    <span class="IconContainer">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)"
-                            class="cart">
-                            <path
-                                d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z">
-                            </path>
-                        </svg>
-                    </span>
-                    <p class="text">{{'Add_To_Cart'|translate}}</p>
-                </button>
+                    <p class="underline">Produit Organique</p>
+                    <blockquote>
+                        <q>Notre miel est cultivé avec respect pour l'environnement et votre bien-être.
+                        </q>
+                    </blockquote>
+
+                    <p class="underline">Extraction à froid</p>
+                    <blockquote>
+                        <q>Notre miel est extrait à froid pour préserver ses nutriments et ses saveurs délicates,
+                            offrant une expérience gustative authentique et riche.
+                        </q>
+                    </blockquote>
+
+
+                </section>
+            </div>
+        </div>
+
+        <section>
+            <h2 class="title">{{'Similar_Product'|translate}}</h2>
+            <section class="results">
+                <app-material-honey *ngFor="let materialHoney of materialList"
+                    [materialHoney]="materialHoney"></app-material-honey>
+
             </section>
-
-        </div>
-
-        <div>
-            <img class="listing-photo animated-img" [src]="materialHoney?.photo" alt="Exterior photo of {{materialHoney?.name}}" />
-        </div>
-
-        <section class="listing-apply">
-            <!--<h2 class="section-heading">Apply now to live here</h2>
-        <form [formGroup]="applyForm" (submit)="submitApplication()">
-          <label for="first-name">First Name</label>
-          <input id="first-name" type="text" formControlName="firstName">
-  
-          <label for="last-name">Last Name</label>
-          <input id="last-name" type="text" formControlName="lastName">
-  
-          <label for="email">Email</label>
-          <input id="email" type="email" formControlName="email">
-          <button type="submit" class="primary">Apply now</button>
-        </form> -->
         </section>
-        
-
-       
-
     </div>
-    <h2 class="title">{{'Similar_Product'|translate}}</h2>
-    <section class="results">
-        <app-material-honey *ngFor="let materialHoney of materialList" [materialHoney]="materialHoney"></app-material-honey>
-    </section>
-</article>
+</section>
