--- a/src/app/cart/personal-info-step/personal-info-step.component.html
+++ b/src/app/cart/personal-info-step/personal-info-step.component.html
@@ -1,4 +1,4 @@
-<div class="personal-info-step">
+<div class="personal-info-step" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
   <h3>{{'cart.Datos Personales.Title'|translate}}</h3>
   <form *ngIf="personalInfoForm" (ngSubmit)="onSubmit()" [formGroup]="personalInfoForm">
     <div class="form-group">
