--- a/src/app/functionalities/menuburger/menuburger.component.css
+++ b/src/app/functionalities/menuburger/menuburger.component.css
@@ -15,7 +15,7 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    left: 0;
+    left: -65px;
     width: 100%;
     text-align: center;
   }
