--- a/src/app/cart/cart-step/cart-step.component.html
+++ b/src/app/cart/cart-step/cart-step.component.html
@@ -1,32 +1,40 @@
-<div class="cart-list">
-  <div *ngFor="let item of cartItems" >
+<section>
+  <div class="cart-list">
 
+    <div *ngFor="let item of cartItems">
 
-
-    <div class="cart-item"  *ngIf="item.type=== 'HN'">
-      <div class="cart-item-details">
-        {{ item.name }} - {{ item.quantity }} - {{ item.weight }} kg
+      <div>
+        <img [src]="item?.photo" alt="Exterior photo of {{item?.name}}" />
       </div>
-      <div class="cart-item-actions">
-        <span class="btn-delete" (click)="removeItem(item.id)">
-          <i class="fas fa-trash-alt"></i>
-        </span>
-        <input class="input-quantity" type="number" [(ngModel)]="item.quantity" (change)="updateItem(item.id, item.quantity, item.weight)">
-        <input class="input-weight" type="number" [(ngModel)]="item.weight" (change)="updateItem(item.id, item.quantity, item.weight)">
-      </div>
-    </div>
 
-    <div class="cart-item"  *ngIf="item.type=== 'MT'">
-      <div class="cart-item-details">
-        {{ item.name }} - {{ item.quantity }} unidad
+      <div class="cart-item" *ngIf="item.type=== 'HN'">
+        <div class="cart-item-details">
+          {{ item.name }} - {{ item.quantity }} - {{ item.weight }} kg
+        </div>
+        <div class="cart-item-actions">
+          <span class="btn-delete" (click)="removeItem(item.id)">
+            <i class="fas fa-trash-alt"></i>
+          </span>
+          <input class="input-quantity" type="number" [(ngModel)]="item.quantity"
+            (change)="updateItem(item.id, item.quantity, item.weight)">
+          <input class="input-weight" type="number" [(ngModel)]="item.weight"
+            (change)="updateItem(item.id, item.quantity, item.weight)">
+        </div>
       </div>
-      <div class="cart-item-actions">
-        <span class="btn-delete" (click)="removeItem(item.id)">
-          <i class="fas fa-trash-alt"></i>
-        </span>
-        <input class="input-quantity" type="number" [(ngModel)]="item.quantity" (change)="updateItemMaterial(item.id, item.quantity)">
-        
+
+      <div class="cart-item" *ngIf="item.type=== 'MT'">
+        <div class="cart-item-details">
+          {{ item.name }} - {{ item.quantity }} unidad
+        </div>
+        <div class="cart-item-actions">
+          <span class="btn-delete" (click)="removeItem(item.id)">
+            <i class="fas fa-trash-alt"></i>
+          </span>
+          <input class="input-quantity" type="number" [(ngModel)]="item.quantity"
+            (change)="updateItemMaterial(item.id, item.quantity)">
+
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
