--- a/src/app/cart/cart-step/cart-step.component.html
+++ b/src/app/cart/cart-step/cart-step.component.html
@@ -9,7 +9,7 @@
 
       <div class="cart-item" *ngIf="item.type=== 'HN'">
         <div class="cart-item-details">
-          {{ item.name }} - {{ item.quantity }} - {{ item.weight }} kg
+          {{ item.name }} - {{ item.quantity }} - {{ item.weight }} kg - {{ item.price | currency }}
         </div>
         <div class="cart-item-actions">
           <span class="btn-delete" (click)="removeItem(item.id)">
@@ -17,8 +17,12 @@
           </span>
           <input class="input-quantity" type="number" [(ngModel)]="item.quantity"
             (change)="updateItem(item.id, item.quantity, item.weight)">
-          <input class="input-weight" type="number" [(ngModel)]="item.weight"
+          <select class="input-weight styled-select" [(ngModel)]="item.weight"
             (change)="updateItem(item.id, item.quantity, item.weight)">
+            <option value="1000">1kg</option>
+            <option value="500">500g</option>
+            <option value="250">250g</option>
+          </select>
         </div>
       </div>
 
