--- a/src/app/products/courses-honey/courses-honey.component.html
+++ b/src/app/products/courses-honey/courses-honey.component.html
@@ -1,6 +1,6 @@
 <section class="listing">
   <img class="listing-photo animated-img" [src]="coursHoney.photo" alt="Exterior photo of {{coursHoney.title}}">
   <h2 class="listing-heading">{{ coursHoney.title }}</h2>
-  <p class="listing-location">{{ coursHoney.ubication}}, {{coursHoney.price }}</p>
+  <p class="listing-location">{{ coursHoney.ubication}}, {{coursHoney.price | currency }}</p>
   <a [routerLink]="['/detailsCours', coursHoney.id]">{{'Learn_More'|translate}}</a>
 </section>
