--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -27,12 +27,17 @@
       <div class="flex-item">
         <div class="flex-container-col">
           <section class="listing-description">
+            <select [(ngModel)]="selectedWeight">
+              <option value="1000">1kg</option>
+              <option value="500">500g</option>
+              <option value="250">250g</option>
+            </select>
             <p class="listing-location">{{housingLocation?.city}}</p>
-            <p class="">{{'Price'|translate}}: {{housingLocation?.price | currency }}</p>
+            <p>{{'Price' | translate}}: {{ getPrice() | currency }}</p>
             <p>{{'Location'|translate}}: {{housingLocation?.state}}</p>
             <p>{{'Category'|translate}}:: {{housingLocation?.category}}</p>
             <p>{{'Category'|translate}}:: {{housingLocation?.id}}</p>
-            <button class="CartBtn" (click)="addToCart(housingLocation?.id)">
+            <button class="CartBtn" (click)="addToCart(housingLocation?.id)" [disabled]="!housingLocation">
               <span class="IconContainer">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)"
                   class="cart">
